--- a/mw.ui
+++ b/mw.ui
@@ -18,6 +18,9 @@
   <property name="windowTitle">
    <string>MW</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
@@ -55,7 +58,7 @@
      <x>0</x>
      <y>0</y>
      <width>785</width>
-     <height>28</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
