--- a/mw.ui
+++ b/mw.ui
@@ -38,9 +38,9 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="graphicsTab">
+      <widget class="QWidget" name="settingsTab">
        <attribute name="title">
-        <string>Graphics</string>
+        <string>Settings</string>
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
@@ -52,35 +52,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>785</width>
-     <height>28</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
-     <string>Manage</string>
-    </property>
-    <addaction name="actionNewAccount"/>
-    <addaction name="actionRemove_Account"/>
-   </widget>
-   <addaction name="menuFile"/>
-  </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionNewAccount">
-   <property name="text">
-    <string>New Account</string>
-   </property>
-  </action>
-  <action name="actionRemove_Account">
-   <property name="text">
-    <string>Remove Account</string>
-   </property>
-  </action>
  </widget>
  <customwidgets>
   <customwidget>
