Remove TransactionWidget Works Modify transactions and account still not implemented. QDateTime Axis Not Work

--- a/Dialogs/transactiondialog.ui
+++ b/Dialogs/transactiondialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>590</width>
-    <height>237</height>
+    <width>620</width>
+    <height>391</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,15 +30,6 @@
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QFormLayout" name="formLayout">
-      <item row="0" column="0">
-       <widget class="QDateEdit" name="dateEdit"/>
-      </item>
-      <item row="0" column="1">
-       <widget class="QDoubleSpinBox" name="amoutDSP"/>
-      </item>
-      <item row="3" column="0" colspan="2">
-       <widget class="QTextEdit" name="commentTextEdit"/>
-      </item>
       <item row="2" column="0" colspan="2">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
@@ -59,6 +50,15 @@
          </widget>
         </item>
        </layout>
+      </item>
+      <item row="3" column="0" colspan="2">
+       <widget class="QTextEdit" name="commentTextEdit"/>
+      </item>
+      <item row="0" column="0" colspan="2">
+       <widget class="QCalendarWidget" name="calendarWidget"/>
+      </item>
+      <item row="1" column="0" colspan="2">
+       <widget class="QDoubleSpinBox" name="amoutDSP"/>
       </item>
      </layout>
     </widget>
